deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-java-sj
  namespace: bermtec
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: dotnet-sj
  template:
    metadata:
      labels:
        app: dotnet-sj
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: type
                operator: In
                values:
                - frontend
          preferredDuringSchedulingIgnoredDuringExecution:  
          - weight: 1
            preference:
              matchExpressions:
              - key: type
                operator: In
                values:
                - frontend
      serviceAccountName: dotnet-sj-sa
      containers:
      - name: dotnet-sj-test
        image: shubham4994/donet-sj:1.0.0
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          exec:
            command:
            - ls
