service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-service
  namespace: bermtec
spec:
  selector:
    app: dotnet-sj
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
